<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#569FDA">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="130dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/playername"
        android:textSize="30dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/edtusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:padding="10dp"
        android:layout_margin="50dp"
        android:background="@color/white"
        />
    <TextView
        android:id="@+id/Title2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textAlignment="center"
        android:textSize="23dp"
        android:layout_below="@+id/edtname"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <Spinner
        android:id="@+id/Spinner"
        android:layout_width="156dp"
        android:layout_height="38dp"
        android:layout_below="@+id/Title2"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:background="#FFFF"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btntart"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/start"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/btnback"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/back"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/edtText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:text="@string/madeby"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="italic" />
</LinearLayout>