<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#569FDA"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo" />

    <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="40dp"
            android:ems="20"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtEmail"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="50dp"
            android:ems="20"
            android:hint="@string/password"
            android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="211dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/register" />

    </LinearLayout>

    <TextView
        android:id="@+id/edtText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/madeby"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="italic" />

</LinearLayout>