<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#569FDA"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btnreturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A888E1"
        android:src="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E41010"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="#F6E127"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text=""
        android:layout_marginTop="5dp"
        android:textSize="34sp"
        android:textStyle="bold" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/PieChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
    </com.github.mikephil.charting.charts.PieChart>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnagain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="@string/again" />

        <Button
            android:id="@+id/btnQuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/quit" />
    </LinearLayout>
</LinearLayout>