<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#569FDA"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btnreturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#A888E1"
        android:src="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/qs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnreturn"
        android:layout_centerHorizontal="true"
        android:text="@string/question"
        android:textAlignment="center"
        android:textColor="#FAF6F6"
        android:textSize="30dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/qsimage"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_below="@id/qs"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_below="@id/qsimage"
        android:textSize="40dp"
        tools:text="00:30" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        >

        <RadioButton
            android:id="@+id/rdbA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="#FFFFFFFF"
            android:text="A." />

        <RadioButton
            android:id="@+id/rdbB"
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFFFF"
            android:text="B." />

        <RadioButton
            android:id="@+id/rdbC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="#FFFFFFFF"
            android:text="C." />

        <RadioButton
            android:id="@+id/rdbD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="#FFFFFFFF"
            android:text="D." />
    </RadioGroup>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/RadioGroup"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp">

    <Button
        android:id="@+id/Answer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RadioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/answer"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/Skip"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>

    <TextView
        android:id="@+id/Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="650dp"
        android:layout_marginBottom="10dp"
        android:background="#E15E5E"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

</RelativeLayout>
